--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abdullahtech11.github.io/React_Projects/my-app/",
+  "homepage": "https://abdullahtech11.github.io/React_Projects/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
